--- a/index.html
+++ b/index.html
@@ -1,15 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
-<title>Page Title</title>
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="">
-<style>
-</style>
-<script src=""></script>
-<!--- Code above this line will not be displayed on the browser --> 
-<body>
-<p> Hello world!<p>
- <p>My name is Sanjay Reddy Nagarimadugu </p>
+
+<head>
+	<title>Index</title>
+	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<link rel="stylesheet" text="text/css" href="stylesheet.css">
+
+	<!--- Information you don't want to display to users -->
+
+</head>
+
+<body class="index_page">
+	<header>
+		<h1>
+			Table of contents
+		</h1>
+		<nav>
+			<dl>
+				<dt class="index_element"><a href="index.html">Index Page</a></dt>
+				<dt class="index_element"><a href="music.html">Music Interests</a></dt>
+				<dd class="index_element"><a href="albums.html">Favorite Albums</a></dd>
+
+				<dt class="index_element"><a href="travel.html">Places Travelled</a></dt>
+
+				<dt class="index_element"><a href="games.html">Video Games</a></dt>
+
+			</dl>
+		</nav>
+	</header>
+	<br><br>
+	<h2>About Me</h2>
+	<p>I was born on October 17th, 2003, in Bentonville, Arkansas. When I was 7, my family moved to Bangalore, India,
+		where I lived until I came to college.
+		<br>Fun Fact: I was actually supposed to stay in India for my undergrad, but my SAT score was good enough that
+		my parents were fine with me going abroad.
+	</p>
+	<img src="me.jpg" alt="A Photo of Me">
+	<p class="img_label">A Photo of Me</p>
 </body>
+
 </html>
