--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
 		<br>Fun Fact: I was actually supposed to stay in India for my undergrad, but my SAT score was good enough that
 		my parents were fine with me going abroad.
 	</p>
+	<h3>
+		My advice to international students applying to college
+	</h3>
+	<p>The things you consider important when applying, like the college's rank, don't matter as much as you think. When I was applying to colleges, I didn't consider stuff like location, social life, and 
+		everything else that important, but now that I'm here, I'm glad I'm enjoying it so much. It's important to do your due diligence on otehr stuff college entails as well, rather than just education, cause
+		 they can impact your life pretty considerably
+	</p>
 	<img src="me.jpg" alt="A Photo of Me">
 	<p class="img_label">A Photo of Me</p>
 </body>
