--- a/travel.html
+++ b/travel.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8">
 <head>
+	<meta charset="UTF-8">
 	<title>Travel</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<link rel="stylesheet" text="text/css" href="stylesheet.css">
+	<link rel="stylesheet" href="stylesheet.css">
 
 	<!--- Information you don't want to display to users -->
 
@@ -17,12 +17,14 @@
 	<nav>
 		<dl>
 			<dt class="index_element"><a href="index.html">Index Page</a></dt>
+			<dd>Contains Main Directory</dd>
 			<dt class="index_element"><a href="music.html">Music Interests</a></dt>
 			<dd class="index_element"><a href="albums.html">Favorite Albums</a></dd>
 
 			<dt class="index_element"><a href="travel.html">Places Travelled</a></dt>
-
+			<dd>Places I've travelled to</dd>
 			<dt class="index_element"><a href="games.html">Video Games</a></dt>
+			<dd>My favorite video games</dd>
 
 		</dl>
 	</nav>
