--- a/albums.html
+++ b/albums.html
@@ -29,7 +29,8 @@
 
 		</dl>
 	</nav>
-	<ol>My 5 Favorite Albums Are as Follows
+	<p>My 5 Favorite Albums Are as Follows</p>
+	<ol>
 		<li>Rodeo : Travis Scott
 			<p>One of Travis Scott's first albums, it's definetely my favorite of his, the beats and variation mid song
 				in many of these songs make them very fun to listen to.</p>
